--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/kankan_home.css
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/kankan_home.css
@@ -14,7 +14,7 @@ body .mui-table-view-cell.mui-active{
 
 .kankan_jyz {
 	background-color: #F0AD4E;
-	margin-top: -9em;
+	margin-top: -85%;
 	position: absolute;
 	opacity: 0.6;
 	padding: 0 0.5em;
@@ -33,7 +33,7 @@ body .mui-table-view-cell.mui-active{
 }
 .kankan_jycl {
 	background-color: #C7254E;
-	margin-top: -9em;
+	margin-top: -85%;
 	position: absolute;
 	opacity: 0.6;
 	padding: 0 0.5em;
@@ -70,15 +70,15 @@ body .mui-table-view-cell.mui-active{
 }
 
 .ka_imgoption {
-	height: 100px;
-	line-height: 100px;
-	vertical-align: middle;
-	display: inline;
+	/*height: 100px;*/
+	/*line-height: 100px;*/
+	/*vertical-align: middle;*/
+	/*display: inline;*/
 	overflow: hidden;
 }
 .ka_imgoption img{
-	vertical-align: middle;
-	max-height: 100px;
+	/*vertical-align: middle;*/
+	/*max-height: 100px;*/
 }
 .ka_exchangeheadimage{
 	border-radius: 50%; width: 20px; height: 20px;
@@ -547,7 +547,6 @@ body .mui-table-view-cell.mui-active{
 	font-size: 14px;
 }
 
-
 /**take picture***/
 
 .container {
@@ -563,7 +562,7 @@ body .mui-table-view-cell.mui-active{
 	padding: 0.3rem;
 	overflow: auto;
 	clear: both;
-	margin: 1rem auto;
+	margin: 1rem auto -0.1rem;
 	border: 1px solid #cccccc;
 }
 
@@ -827,10 +826,10 @@ body .mui-table-view-cell.mui-active{
 }
 
 .editebutton {
-	width: 150px;
-	height: 30px;
-	font-size: 14px;
-	padding-top: 7px;
+	width: 12em;
+	height: 2.5em;
+	font-size: 1em;
+	padding-top: 0.5em;
 	text-align: center;
 }
 
@@ -851,7 +850,7 @@ body .mui-table-view-cell.mui-active{
 	width: 30%;text-align: left;margin-left: -1em;
 }
 .ka_usernicknamebox{
-	width: 78%;float: right;margin-top: -4.5em;
+	width: 85%;float: right;margin-top: -4.5em;
 }
 .ka_userfontsize{
 	font-size: 14px;
