--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/kankan_home.css
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/kankan_home.css
@@ -22,7 +22,7 @@ body .mui-table-view-cell.mui-active{
 	font-size: 12px;
 }
 .kankan_morecoin {
-	margin-top: -10em;
+	margin-top: -103%;
 	position: absolute;
 	opacity: 1;
 	padding: 0 1.2em;
@@ -326,7 +326,10 @@ body .mui-table-view-cell.mui-active{
 }
 
 .ka_commentlevelbox {
-	padding-right: 1.8em;
+	text-align: center;
+	width: 33%;
+	/*padding-right: 5%;*/
+	margin-left: -10%;
 }
 
 .kankan_area2 {
@@ -393,6 +396,9 @@ body .mui-table-view-cell.mui-active{
 .ka_commentnum {
 	text-align: center;
 	font-size: 14px;
+}
+#goodcomment {
+	margin-top: 2%;
 }
 #normalcomment {
 	margin-left: 8.2em;
@@ -562,7 +568,7 @@ body .mui-table-view-cell.mui-active{
 	padding: 0.3rem;
 	overflow: auto;
 	clear: both;
-	margin: 1rem auto -0.1rem;
+	margin: 3.4em auto -0.1rem;
 	border: 1px solid #cccccc;
 }
 
