--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/kankan_home.css
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/kankan_home.css
@@ -929,3 +929,6 @@ body .mui-table-view-cell.mui-active{
 	font-size: 14px;color:#555555;
 	text-align: right;
 }
+#reloadpage{
+	font-size: 14px;
+}
