--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/css/kankan_home.css
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/css/kankan_home.css
@@ -318,6 +318,14 @@ body .mui-table-view-cell.mui-active{
 	font-size: 14px;
 	color: red;	
 }
+.ka_sorttext{
+	line-height: 1.5em;color:#6D6D72;font-size: 14px;width: 25%;
+}
+.ka_sortvale{
+	line-height: 1.5em;color: #333333;font-size: 14px;width: 75%;
+	text-align: left;
+	padding-left: 1em;
+}
 /***productlist page***/
 
 .ka_comlevnumber {
