--- a/kankan/css/listitem.css
+++ b/kankan/css/listitem.css
@@ -1,3 +1,27 @@
+@media screen and (min-width: 320px) and (max-width: 359px) {
+    .paddingDistance {
+        padding-left: 8%;
+    }
+    .numDistance {
+        padding-left: 10%;
+    }
+}
+@media screen and (min-width: 360px) and (max-width: 767px){
+    .paddingDistance {
+        padding-left: 11%;
+    }
+    .numDistance {
+        padding-left: 10%;
+    }
+}
+@media screen and (min-width: 768px) {
+    .paddingDistance {
+        padding-left: 24%;
+    }
+    .numDistance {
+        padding-left: 10%;
+    }
+}
 .li-content {
 	background-color: #FFFFFF;
 	padding: 2px;
