--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/css/wu.css
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/css/wu.css
@@ -122,7 +122,7 @@
 	/*padding-left:14px;*/
 	/*margin-right:-1.6em;*/
 	/*margin: 0 2%;*/
-	width:45%;
+	width:40%;
 	font-size:17px;
 	display:inline-block;
 	text-align:center;
@@ -158,11 +158,11 @@
 	overflow:hidden;
 }
 .tran-button-buy {
-	padding-top:0px; 
+	/*padding-top:0px; 
 	padding-left:0.6em;
-	padding-right:0.6em;  
+	padding-right:0.6em;*/ 
 	/*margin-right:-4px;*/
-	width:50%;
+	width:40%;
 	font-size:17px;
 	display:inline-block;
 	text-align:center;
